--- a/static-files/index.html
+++ b/static-files/index.html
@@ -1,1 +1,15 @@
-../../../client/index.html
+<!doctype html>
+<html lang="en">
+    <head>
+        <title>CIS 552 Programming Lanuage Quiz</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!-- Bootstrap -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+        <script src="index.js"></script>
+    </head>
+    <body>
+        <div id="app"></div>
+    </body>
+</html>
